# markov-generator

./: Cargo.toml  README.md
examples/: .rustfmt.toml  corpus.txt  example.rs
misc/: crate-readme.md
src/: lib.rs  map.rs
