[package]
name = "markov-generator"
version = "0.2.0"
edition = "2021"
rust-version = "1.65"
description = """Highly customizable library for building Markov chains and \
    generating random data"""
documentation = "https://docs.rs/markov-generator"
readme = "misc/crate-readme.md"
repository = "https://github.com/taylordotfish/markov-generator"
license = "GPL-3.0-or-later"
keywords = ["markov", "markov-chain", "markov-text", "random", "serialize"]
categories = ["data-structures", "no-std", "text-processing"]

[features]
default = ["serde", "std"]
std = ["serde?/std", "rand/std", "rand/std_rng"]
doc_cfg = []

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.serde]
version = "1.0"
default-features = false
features = ["alloc", "derive"]
optional = true

[package.metadata.docs.rs]
features = ["doc_cfg"]
